--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsx-loader": "^0.13.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-server": "^1.12.1",
+    "webpack-traceur-loader": "^0.3.0"
   },
   "dependencies": {
     "flux": "^2.1.1",
